# lv_cpython_mod

./: .gitignore  AGENTS.md  BUILDING.md  PUBLISHING.md  README.md  index.html  lv_conf.h  lvpy_runtime.c  lvpy_runtime.h  pyproject.toml  requirements.txt  setup.py  test_lvgl_cpython.py
.cursor/rules/: project-docs.mdc
.github/workflows/: publish-testpypi.yml  sync-and-release.yml
scripts/: build_pyodide_wheel.sh  next_release_version.sh  publish_release_tag.sh  sync_from_lv_bindings.sh
web/: index.html
web/wheels/: lvgl.json  lvgl_cpython-0.0.0.dev0-cp314-cp314-pyemscripten_2026_0_wasm32.whl
