[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lvgl-cpython"
dynamic = ["version"]
description = "LVGL bindings for CPython (generated)"
requires-python = ">=3.10"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools]
packages = []

# Wheel CI: one wheel per CPython minor (cp310…cp314) × Linux + Windows — see README.
# Local reproduction: PUBLISHING.md § "Local wheel builds (cibuildwheel)" (Linux needs Docker).
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*musllinux* *-macosx_* *-win32"
test-command = "python {project}/test_lvgl_cpython.py"
test-sources = ["test_lvgl_cpython.py"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
